<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">WoW Character</string>
	
	<string name="search_title">Search</string>
	<string name="search_name">name</string>
	<string name="search_region">region:</string>
	<string name="search_addToFavorites_ok_toast">Character \"%1\" added to favorites.</string>
	<string name="search_addToFavorites_fail_toast">Character \"%1\" cannot add as favorite!</string>
	<string name="search_contextMenu_addToFavorites">add to Favorites</string>
	<string name="search_menu_sort">Sort...</string>
	<string name="search_menu_sortByRealm">sort by realm (asc)</string>
	<string name="search_menu_sortByRelevance">sort by relevance (desc)</string>
	<string name="search_char_found_none_toast">no character found</string>
	<string name="search_char_found_one_toast">one character found</string>
	<string name="search_char_found_more_toast">%1 characters found</string>
	
	<string name="searchListAdapter_guild">Guild: </string>	
	
	<string name="charlist_title">Favorites</string>
	<string name="charlist_menu_search">Search</string>
	<string name="charlist_menu_refresh">Refresh</string>
	<string name="charlist_menu_sort">Sort...</string>
	<string name="charlist_menu_sort_name_asc">by name, ascendant</string>
	<string name="charlist_menu_sort_name_desc">by name, descendant</string>
	<string name="charlist_menu_sort_level_asc">by level, ascendant</string>
	<string name="charlist_menu_sort_level_desc">by level, descendant</string>
	<string name="charlist_favorite_deleted_toast">Character \"%1\" from favorites removed.</string>
	<string name="charlist_favorite_updated_toast">Character \&quot;%1\&quot; refreshed.</string>
	<string name="charlist_menu_clear">Clear list</string>
	<string name="charlist_contextMenu_removeFromFavorites">remove from favorites</string>
	<string name="charlist_deleteAll">Really delete all favorites?</string>
	
	<string name="charview_title">characterdetails</string>
	<string name="charview_tab_detail">details</string>
	<string name="charview_tab_items">items</string>
	<string name="charview_tab_values">values</string>
	<string name="charview_tab_rss">rss feed</string>
	<string name="charview_health">health</string>
	<string name="charview_second_mana">mana</string>
	<string name="charview_second_rage">rage</string>
	<string name="charview_second_energy">energy</string>
	<string name="charview_second_runic">runic</string>
	<string name="charview_talentSpec">Talents:</string>

	<string name="region_toggle_US">US</string>
	<string name="region_toggle_EU">EU</string>

	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="warn">Attention:</string>
	<string name="favourite">Save as favourite</string>
	<string name="favourites_title">Favourite(s):</string>	
	<string name="tooltipSearchlist_Realm">Realm: %1 ...</string>
	<string name="tooltipSearchlist_Relevance">Relevance: %1</string>
	<string name="na">n.a.</string>
	
	<string name="author1">Thomas Funke</string>
	<string name="author2">Stefan Moldenhauer</string>
</resources>