<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/search"
		android:icon="@android:drawable/ic_menu_search"
		android:orderInCategory="1"
		android:title="@string/charlist_menu_search" />
	<item android:title="@string/charlist_menu_sort"
		android:icon="@android:drawable/ic_menu_more"
		android:orderInCategory="2">
		<menu>
			<item android:id="@+id/sort_name_asc"
				android:title="@string/charlist_menu_sort_name_asc"
				android:icon="@android:drawable/ic_menu_sort_alphabetically"
				android:orderInCategory="1" />
			<item android:id="@+id/sort_name_desc"
				android:title="@string/charlist_menu_sort_name_desc"
				android:icon="@android:drawable/ic_menu_sort_alphabetically"
				android:orderInCategory="1" />
			<item android:id="@+id/sort_level_asc"
				android:title="@string/charlist_menu_sort_level_asc"
				android:icon="@android:drawable/ic_menu_sort_by_size"
				android:orderInCategory="2" />
			<item android:id="@+id/sort_level_desc"
				android:title="@string/charlist_menu_sort_level_desc"
				android:icon="@android:drawable/ic_menu_sort_by_size"
				android:orderInCategory="2" />
		</menu>
	</item>
	<item android:id="@+id/clear_list"
		android:title="@string/charlist_menu_clear"
		android:icon="@android:drawable/ic_menu_close_clear_cancel"
		android:orderInCategory="3" />
</menu>